# Scheduling-Hub

./: .env  .gitignore  README.md  diesel.toml  index.html  package.json  tailwind.config.js
src/: App.tsx  Themes.ts  Utilities.ts  main.tsx  styles.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  models.rs  schema.rs
src-tauri/src/migrations/2023-07-12-062735_create_routing_tasks/: down.sql  up.sql
src-tauri/src/migrations/2023-08-09-143815_lmcp_tasks/: down.sql  up.sql
src-tauri/src/migrations/2023-08-23-050403_alter_same_day_route_task/: down.sql  up.sql
src/components/: CollapsableButton.tsx  CollapsableSidebar.tsx  DropArea.tsx  FileUploader.css  FileUploader.tsx  IconTypography.tsx  LMCPStatusOverview.tsx
src/components/pages/: LMCP.tsx  SameDay.tsx  Settings.tsx  Stats.tsx  Tasks.tsx
src/components/tasks/: AMXL.tsx  LMCP.tsx  SameDay.tsx
src/types/: App.ts  Database.ts  Settings.ts  Tasks.ts
