[package]
name = "scheduling-hub"
version = "0.0.1"
description = "A tool for Schedulers"
authors = ["Clayton Wilson"]
license = "MIT"
repository = "https://github.com/ClaytonWWilson/Scheduling-Hub"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
diesel_migrations = "2.0.0"
lazy_static = "1.4"
libsqlite3-sys = {version = "0.26.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.3", features = [ "path-all", "dialog-save", "fs-read-file", "fs-write-file", "shell-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
